# DeployLangChain

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  명령어.txt
.github/workflows/: main.yml
