[project]
name = "deploy-langchain"
version = "0.1.0"
description = ""
authors = [
    {name = "NamEon",email = "143885031+skadjs@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pypdf (>=6.1.1,<7.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.35,<0.4.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "gradio (>=5.49.1,<6.0.0)",
    "gradio-pdf (>=0.0.22,<0.0.23)",
    "faiss-cpu (>=1.12.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "deploy_langchain", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
